--- a/README
+++ b/README
@@ -1,10 +1,14 @@
+# GitHub Action Build Status
+[![GCC Build](https://github.com/Diaz1401/gcc-build/actions/workflows/toolchain-build.yml/badge.svg?branch=main)](https://github.com/Diaz1401/gcc-build/actions/workflows/toolchain-build.yml)
+
 # Download
 Check latest release [here](https://github.com/Diaz1401/gcc/releases/latest)
 
 # Features
 ```
-  ==> GCC-GCCVERSION targeting 'arm64' and 'arm'
-  ==> Binutils-BINUTILSVERSION targeting 'arm64' and 'arm'
+  ==> GCC-GCCVERSION
+  ==> Binutils-BINUTILSVERSION
+  ==> Targets: 'arm-eabi', 'aarch64-elf', 'x86_64-elf'
   ==> Stripped binaries
   ==> Highly compressed tar archive with zstd v1.5.5
 ```
