--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 # GitHub Action Build Status
-[![GCC Build](https://github.com/Diaz1401/gcc-build/actions/workflows/toolchain-build.yml/badge.svg?branch=main)](https://github.com/Diaz1401/gcc-build/actions/workflows/toolchain-build.yml)
+[![Release GCC Build](https://github.com/Diaz1401/gcc-build/actions/workflows/release-toolchain-build.yml/badge.svg?branch=main)](https://github.com/Diaz1401/gcc-build/actions/workflows/release-toolchain-build.yml)
 
 # Download
-Check latest release [here](https://github.com/Diaz1401/gcc/releases/latest)
+Check latest release [here](https://github.com/Diaz1401/gcc-stable/releases/latest)
 
 # Features
 ```
@@ -10,7 +10,7 @@ Check latest release [here](https://github.com/Diaz1401/gcc/releases/latest)
   ==> Binutils-BINUTILSVERSION
   ==> Targets: 'aarch64-elf', 'x86_64-elf'
   ==> Stripped binaries
-  ==> Highly compressed tar archive with zstd v1.5.5
+  ==> Compressed tar archive with zstd v1.5.5
 ```
 
 # Build script
