--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Check latest release [here](https://github.com/Diaz1401/gcc-stable/releases/late
 ```
   ==> GCC-GCCVERSION
   ==> Binutils-BINUTILSVERSION
-  ==> Targets: 'aarch64-elf', 'x86_64-elf'
+  ==> Target: 'aarch64-linux-gnu'
   ==> Stripped binaries
   ==> Compressed tar archive with zstd v1.5.5
 ```
