--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# GitHub Action Build Status
+# Cirrus CI Build Status
 [![Build Status](https://api.cirrus-ci.com/github/Diaz1401/gcc-build.svg)](https://cirrus-ci.com/Diaz1401/gcc-build)
 
 # Download
